@@ -4,6 +4,11 @@
 
 @section v2_04_dev Changes with libapreq2-2.04-dev
 
+- C API [Ken Burcham, joes]
+  Fix bug in url parser that occurs when a %XX-encoded sequence
+  is split across multiple buckets.  Added apreq_decode_decodev
+  to make this problem less inconvenient.
+
 - Perl API [joes]
   Exception objects inherit from the object which raised it,
   which allows $@ to invoke its methods with impunity (exceptions 
